--- a/Crunchers/Views/Admin/ManageAllProducts.cshtml
+++ b/Crunchers/Views/Admin/ManageAllProducts.cshtml
@@ -1,4 +1,4 @@
-﻿@model Crunchers.Controllers.AdminController.ProductResponse
+﻿@model Crunchers.Controllers.AdminController.ProductAdminResponse
 <div id="LoadingImage" style="display:none;background-color: rgb(255, 255, 255); opacity: 0.7; width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; z-index: 99999;">
     <img style="display: block;margin-left: auto;margin-right: auto" src="https://igc-market.ru/images/loading.gif"/>
 </div>
