--- a/Crunchers/Views/Catalog/CategoryProducts.cshtml
+++ b/Crunchers/Views/Catalog/CategoryProducts.cshtml
@@ -1,4 +1,5 @@
-﻿@model Crunchers.Controllers.CatalogController.CatalogProductsResponse
+﻿@using Microsoft.AspNet.Identity
+@model Crunchers.Controllers.CatalogController.CatalogProductsResponse
 <head>
     @{
         <script>
@@ -29,6 +30,9 @@
          	</script>
     }
 </head>
+<div id="LoadingImage" style="display:none;background-color: rgb(255, 255, 255); opacity: 0.7; width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; z-index: 99999;">
+    <img style="display: block;margin-left: auto;margin-right: auto" src="https://igc-market.ru/images/loading.gif"/>
+</div>
 <script>
 let urlParams = new URLSearchParams(window.location.search);
 function UnselectFilter(filterId) {
@@ -71,6 +75,47 @@ function SubmitSorting() {
         SelectNonProductFilters(all,type[0].id,value[0].id);
     } 
 }
+window.onload= function() {
+  let cart = localStorage.getItem("localCart");
+  if (cart==null){
+      
+  }
+  else {
+      for (x in JSON.parse(cart))
+          {
+              document.getElementById(x).outerHTML='<a id="-1" class="btn btn-default" onclick="">Удалить из корзины</a>';
+              let mock = document.getElementById("-1");
+              mock.id=x; 
+              mock.setAttribute("onclick","deleteFromCart(true,"+x+");")
+          }
+  }
+}
+function addToCart(isLocal,productId) {
+    $("#LoadingImage").show();
+  if(isLocal){
+      let cart = JSON.parse(localStorage.getItem('localCart'));
+      cart[productId]=1;
+      localStorage.setItem('localCart',JSON.stringify(cart));
+  }
+  else {
+      
+  }
+  $("#LoadingImage").hide();
+  location.reload();
+}
+function deleteFromCart(isLocal,productId) {
+    $("#LoadingImage").show();
+  if (isLocal){
+      let cart = JSON.parse(localStorage.getItem('localCart'));
+      delete cart[productId];
+      localStorage.setItem('localCart',JSON.stringify(cart));
+  }
+  else {
+      
+  }
+  $("#LoadingImage").hide();
+  location.reload();
+}
 </script>
 <h1>
     <a href="/Catalog" style="text-decoration: none !important; color: black !important;">←Каталог</a>
@@ -110,6 +155,7 @@ function SubmitSorting() {
         <a class="btn btn-default" onclick="SubmitSorting()">Подтвердить сортировку</a>
     </div>
     <hr/>
+
     @foreach (var filterGroup in Model.Filters)
     {
         @filterGroup.Key
@@ -138,6 +184,7 @@ function SubmitSorting() {
 
 <form>
     @{
+        bool isLocal = User?.Identity?.GetUserId() == null;
 
         foreach (var product in Model.Products)
         {
@@ -156,6 +203,22 @@ function SubmitSorting() {
                 {
                     <text>Рейтинг: @(Math.Round((double) first.RatingSum / first.RatingsAmount)) (@first.RatingsAmount)</text>
                 }
+            }
+            if (Model.Cart.ContainsKey(product.Key.ToString()))
+            {
+                <a id="@product.Key" class="btn btn-default" onclick="deleteFromCart(false,@product.Key)">Удалить из корзины</a>
+            }
+            else
+            {
+                if (isLocal)
+                {
+                    <a id="@product.Key" class="btn btn-default" onclick="addToCart(true,@product.Key)">Добавить в корзину</a>
+                }
+                else
+                {
+                    <a id="@product.Key" class="btn btn-default" onclick="addToCart(false,@product.Key)">Добавить в корзину</a>
+                }
+                
             }
             <br/>
         }
