--- a/Crunchers/Views/Shared/_LoginPartial.cshtml
+++ b/Crunchers/Views/Shared/_LoginPartial.cshtml
@@ -35,7 +35,7 @@ function getCity(city){
 
         <ul class="nav navbar-nav navbar-right">
 
-            <li><a id ="cityItem" href="javascript:location.href='/Manage/ChangeCity?currentCity='+document.getElementById('cityItem').innerText"><script>getCity('@(new CityModel().GetCityById(new UserModel().GetUser(User.Identity?.GetUserId())?.CityId)?.NameRu)')</script></a></li>
+            <li><a id ="cityItem" href="javascript:location.href='/City?currentCity='+document.getElementById('cityItem').innerText"><script>getCity('@(new CityModel().GetCityById(new UserModel().GetUser(User.Identity?.GetUserId())?.CityId)?.NameRu)')</script></a></li>
             @if (User.IsInRole("admin"))
             {
                 <li>
@@ -58,7 +58,7 @@ function getCity(city){
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a id ="cityItem" href="javascript:location.href='/Manage/ChangeCity?currentCity='+document.getElementById('cityItem').innerText"><script>getCity()</script></a></li>
+        <li><a id ="cityItem" href="javascript:location.href='/City?currentCity='+document.getElementById('cityItem').innerText"><script>getCity()</script></a></li>
         <li>@Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new {id = "registerLink"})</li>
         <li>@Html.ActionLink("Выполнить вход", "Login", "Account", routeValues: null, htmlAttributes: new {id = "loginLink"})</li>
     </ul>
