--- a/Crunchers/Views/Admin/ManageOrders.cshtml
+++ b/Crunchers/Views/Admin/ManageOrders.cshtml
@@ -3,32 +3,32 @@
 {
     <form>
         <form>
-            <text>Id = @order.Id</text>
+            <text>Id = @order.OrderId</text>
         </form>
         <form>
             <text>Active = @order.Active</text>
             <a type="button" onclick="
-                $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.Active.ToString())&row=Active&orderId=@(order.Id)', JSON.stringify());">Update Active</a>
+                $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.Active.ToString())&row=Active&orderId=@(order.OrderId)', JSON.stringify());">Update Active</a>
         </form>
         <form>
-            <text>IsPickUp = @order.Deliver</text>
+            <text>IsPickUp = @order.IsForPickUp</text>
             <a type="button" onclick="
-                  $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.Deliver.ToString())&row=Deliver&orderId=@(order.Id)', JSON.stringify());">Update Deliver</a>
+                  $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.IsForPickUp.ToString())&row=Deliver&orderId=@(order.OrderId)', JSON.stringify());">Update Deliver</a>
         </form>
         <form>
             <text>Delivered = @order.Delivered</text>
             <a type="button" onclick="
-                  $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.Delivered.ToString())&row=Delivered&orderId=@(order.Id)', JSON.stringify());">Update Delivered</a>
+                  $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.Delivered.ToString())&row=Delivered&orderId=@(order.OrderId)', JSON.stringify());">Update Delivered</a>
         </form>
         <form>
             <text>Paid = @order.Paid</text>
             <a type="button" onclick="
-                  $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.Paid.ToString())&row=Paid&orderId=@(order.Id)', JSON.stringify());">Update Paid</a>
+                  $.post('@Url.RouteUrl(new {controller = "Manage", action = "UpdateOrder"})?value=@(order.Paid.ToString())&row=Paid&orderId=@(order.OrderId)', JSON.stringify());">Update Paid</a>
         </form>
-        <form>
+        @*<form>
             <text>IsPickUp = @order.Products</text>
         </form>
         <form>@order.UserGuid</form>
-        <hr/>
+        <hr/>*@
     </form>
 }
