--- a/Crunchers/Views/Manage/Orders.cshtml
+++ b/Crunchers/Views/Manage/Orders.cshtml
@@ -3,14 +3,14 @@
 {
     <form>
         <form>
-            <text>Id = @order.Id</text>
+            <text>Id = @order.OrderId</text>
         </form>
         <form>
             <text>Active = @order.Active</text>
             
         </form>
         <form>
-            <text>IsPickUp = @order.Deliver</text>
+            <text>IsPickUp = @order.IsForPickUp</text>
            
         </form>
         <form>
@@ -20,9 +20,9 @@
         <form>
             <text>Paid = @order.Paid</text>
         </form>
-        <form>
+        @*<form>
             <text>IsPickUp = @order.Products</text>
-        </form>
+        </form>*@
     </form>
 
     <br/>
