--- a/Crunchers/Views/Order/Index.cshtml
+++ b/Crunchers/Views/Order/Index.cshtml
@@ -76,14 +76,19 @@ input:checked + .slider:before {
     <hr/>
     @Html.AntiForgeryToken()
 
-    
-    
-    @Html.ValidationSummary("", new {@class = "text-danger"})
+    @Html.HiddenFor(x => x.MakeDeliverOrder.NameRu)
     <div class="form-group">
         @Html.LabelFor(m => m.MakeDeliverOrder.Name, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.MakeDeliverOrder.Name, new {@class = "form-control"})
             @Html.ValidationMessageFor(m => m.MakeDeliverOrder.Name, "", new {@class = "text-danger"})
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.MakeDeliverOrder.Email, new {@class = "col-md-2 control-label"})
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.MakeDeliverOrder.Email, new {@class = "form-control", Value = $"{User.Identity.Name}"})
+            @Html.ValidationMessageFor(m => m.MakeDeliverOrder.Email, "", new {@class = "text-danger"})
         </div>
     </div>
     <div class="form-group">
@@ -101,40 +106,90 @@ input:checked + .slider:before {
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.MakeDeliverOrder.ComfortTime, new {@class = "col-md-2 control-label"})
+        @Html.LabelFor(m => m.MakeDeliverOrder.ComfortDate, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.EditorFor(m => m.MakeDeliverOrder.ComfortTime)
-            @Html.ValidationMessageFor(m => m.MakeDeliverOrder.ComfortTime, "", new {@class = "text-danger"})
+            @Html.EditorFor(m => m.MakeDeliverOrder.ComfortDate)
+            @Html.ValidationMessageFor(m => m.MakeDeliverOrder.ComfortDate, "", new {@class = "text-danger"})
         </div>
     </div>
     <div class="form-group">
+        <div class="col-md-10">
+            @Html.LabelFor(m => m.MakeDeliverOrder.FromTime, new {@class = "col-md-2 control-label"})
+            @Html.TextBoxFor(m => m.MakeDeliverOrder.FromTime, new {@class = "form-control"})
+            @Html.ValidationMessageFor(m => m.MakeDeliverOrder.FromTime, "", new {@class = "text-danger"})
+        </div>
+        <div class="col-md-10">
+            @Html.LabelFor(m => m.MakeDeliverOrder.ToTime, new {@class = "col-md-2 control-label"})
+            @Html.TextBoxFor(m => m.MakeDeliverOrder.ToTime, new {@class = "form-control"})
+            @Html.ValidationMessageFor(m => m.MakeDeliverOrder.ToTime, "", new {@class = "text-danger"})
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-10">
+            @Html.LabelFor(m => m.MakeDeliverOrder.CardNumber, new {@class = "col-md-2 control-label"})
+            @Html.TextBoxFor(m => m.MakeDeliverOrder.CardNumber, new {@class = "form-control"}) <text style="color: #79818a; font-size: 10px">*оставьте поле пустым, чтобы не использовать оплату картой и оплатить позднее</text>
+            @Html.ValidationMessageFor(m => m.MakeDeliverOrder.CardNumber, "", new {@class = "text-danger"})
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Задать пароль" class="btn btn-default"/>
+            <input type="submit" value="Подтвердить информацию о заказе" class="btn btn-default"/>
         </div>
     </div>
 }
-@using (Html.BeginForm("Index", "Order", FormMethod.Post, new {@class = "form-horizontal", role = "form", id = "pickUp", hidden=""}))
+
+@using (Html.BeginForm("Index", "Order", FormMethod.Post, new {@class = "form-horizontal", role = "form", id = "pickUp", hidden = ""}))
 {
     @Html.AntiForgeryToken()
-
+    @Html.HiddenFor(x => x.MakePickUpOrder.NameRu)
     <h4>Самовывоз</h4>
     <hr/>
-    @Html.ValidationSummary("", new {@class = "text-danger"})
     <div class="form-group">
-        @Html.LabelFor(m => m.MakePickUpOrder.NewNewPassword, new {@class = "col-md-2 control-label"})
+        @Html.LabelFor(m => m.MakePickUpOrder.Name, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.MakePickUpOrder.NewNewPassword, new {@class = "form-control"})
+            @Html.TextBoxFor(m => m.MakePickUpOrder.Name, new {@class = "form-control"})
+            @Html.ValidationMessageFor(m => m.MakePickUpOrder.Name, "", new {@class = "text-danger"})
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.MakePickUpOrder.NewField, new {@class = "col-md-2 control-label"})
+        @Html.LabelFor(m => m.MakePickUpOrder.Email, new {@class = "col-md-2 control-label"})
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.MakePickUpOrder.NewField, new {@class = "form-control"})
+            @Html.TextBoxFor(m => m.MakePickUpOrder.Email, new {@class = "form-control", Value = $"{User.Identity.Name}"})
+            @Html.ValidationMessageFor(m => m.MakePickUpOrder.Email, "", new {@class = "text-danger"})
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.MakePickUpOrder.PhoneNumber, new {@class = "col-md-2 control-label"})
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.MakePickUpOrder.PhoneNumber, new {@class = "form-control"})
+            @Html.ValidationMessageFor(m => m.MakePickUpOrder.PhoneNumber, "", new {@class = "text-danger"})
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.MakePickUpOrder.PointOfPickUp, new {@class = "col-md-2 control-label"})
+        <div class="col-md-10">
+            @foreach (var point in Model.PointsOfPickUp)
+            {
+                @Html.RadioButtonFor(model => model.MakePickUpOrder.PointOfPickUp, point.Address)
+                @point.Address<br/>
+            }
+            @Html.ValidationMessageFor(m => m.MakePickUpOrder.PointOfPickUp, "", new {@class = "text-danger"})
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-10">
+            @Html.LabelFor(m => m.MakePickUpOrder.CardNumber, new {@class = "col-md-2 control-label"})
+            @Html.TextBoxFor(m => m.MakePickUpOrder.CardNumber, new {@class = "form-control"}) <text style="color: #79818a; font-size: 10px">*оставьте поле пустым, чтобы не использовать оплату картой и оплатить позднее</text>
+            @Html.ValidationMessageFor(m => m.MakePickUpOrder.CardNumber, "", new {@class = "text-danger"})
+            
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Задать пароль" class="btn btn-default"/>
+            <input type="submit" value="Подтвердить информацию о заказе" class="btn btn-default"/>
         </div>
     </div>
 }
