--- a/Crunchers/Views/Order/Index.cshtml
+++ b/Crunchers/Views/Order/Index.cshtml
@@ -104,6 +104,7 @@ input:checked + .slider:before {
             @Html.TextBoxFor(m => m.MakeDeliverOrder.Address, new {@class = "form-control"})
             @Html.ValidationMessageFor(m => m.MakeDeliverOrder.Address, "", new {@class = "text-danger"})
         </div>
+        <text style="color: #79818a; font-size: 10px">*ул. (название улицы), д. (номер дома), кв. (номер квартитры)</text>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.MakeDeliverOrder.ComfortDate, new {@class = "col-md-2 control-label"})
@@ -111,6 +112,7 @@ input:checked + .slider:before {
             @Html.EditorFor(m => m.MakeDeliverOrder.ComfortDate)
             @Html.ValidationMessageFor(m => m.MakeDeliverOrder.ComfortDate, "", new {@class = "text-danger"})
         </div>
+        <text style="color: #79818a; font-size: 10px">*не позднее чем @DateTime.Now.Add(new TimeSpan(31,0,0,0)).ToShortDateString()</text>
     </div>
     <div class="form-group">
         <div class="col-md-10">
@@ -122,7 +124,9 @@ input:checked + .slider:before {
             @Html.LabelFor(m => m.MakeDeliverOrder.ToTime, new {@class = "col-md-2 control-label"})
             @Html.TextBoxFor(m => m.MakeDeliverOrder.ToTime, new {@class = "form-control"})
             @Html.ValidationMessageFor(m => m.MakeDeliverOrder.ToTime, "", new {@class = "text-danger"})
+            <text style="color: #79818a; font-size: 10px">*служба доставки работает от 7 до 18</text>
         </div>
+        
 
     </div>
 
@@ -140,56 +144,62 @@ input:checked + .slider:before {
         </div>
     </div>
 }
-
-@using (Html.BeginForm("Index", "Order", FormMethod.Post, new {@class = "form-horizontal", role = "form", id = "pickUp", hidden = ""}))
+@if (!Model.PointsOfPickUp.Any())
 {
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(x => x.MakePickUpOrder.NameRu)
-    <h4>Самовывоз</h4>
-    <hr/>
-    <div class="form-group">
-        @Html.LabelFor(m => m.MakePickUpOrder.Name, new {@class = "col-md-2 control-label"})
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.MakePickUpOrder.Name, new {@class = "form-control"})
-            @Html.ValidationMessageFor(m => m.MakePickUpOrder.Name, "", new {@class = "text-danger"})
+    <text>К сожалению, в вашем городе нет точек самовывоза.</text>
+}
+else
+{
+    using (Html.BeginForm("Index", "Order", FormMethod.Post, new {@class = "form-horizontal", role = "form", id = "pickUp", hidden = ""}))
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(x => x.MakePickUpOrder.NameRu)
+        <h4>Самовывоз</h4>
+        <hr/>
+        <div class="form-group">
+            @Html.LabelFor(m => m.MakePickUpOrder.Name, new {@class = "col-md-2 control-label"})
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.MakePickUpOrder.Name, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.MakePickUpOrder.Name, "", new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.MakePickUpOrder.Email, new {@class = "col-md-2 control-label"})
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.MakePickUpOrder.Email, new {@class = "form-control", Value = $"{User.Identity.Name}"})
-            @Html.ValidationMessageFor(m => m.MakePickUpOrder.Email, "", new {@class = "text-danger"})
+        <div class="form-group">
+            @Html.LabelFor(m => m.MakePickUpOrder.Email, new {@class = "col-md-2 control-label"})
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.MakePickUpOrder.Email, new {@class = "form-control", Value = $"{User.Identity.Name}"})
+                @Html.ValidationMessageFor(m => m.MakePickUpOrder.Email, "", new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.MakePickUpOrder.PhoneNumber, new {@class = "col-md-2 control-label"})
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.MakePickUpOrder.PhoneNumber, new {@class = "form-control"})
-            @Html.ValidationMessageFor(m => m.MakePickUpOrder.PhoneNumber, "", new {@class = "text-danger"})
+        <div class="form-group">
+            @Html.LabelFor(m => m.MakePickUpOrder.PhoneNumber, new {@class = "col-md-2 control-label"})
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.MakePickUpOrder.PhoneNumber, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.MakePickUpOrder.PhoneNumber, "", new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.MakePickUpOrder.PointOfPickUp, new {@class = "col-md-2 control-label"})
-        <div class="col-md-10">
-            @foreach (var point in Model.PointsOfPickUp)
-            {
-                @Html.RadioButtonFor(model => model.MakePickUpOrder.PointOfPickUp, point.Address)
-                @point.Address<br/>
-            }
-            @Html.ValidationMessageFor(m => m.MakePickUpOrder.PointOfPickUp, "", new {@class = "text-danger"})
+        <div class="form-group">
+            @Html.LabelFor(m => m.MakePickUpOrder.PointOfPickUp, new {@class = "col-md-2 control-label"})
+            <div class="col-md-10">
+                @foreach (var point in Model.PointsOfPickUp)
+                {
+                    @Html.RadioButtonFor(model => model.MakePickUpOrder.PointOfPickUp, point.Address)
+                    @point.Address<br/>
+                }
+                @Html.ValidationMessageFor(m => m.MakePickUpOrder.PointOfPickUp, "", new {@class = "text-danger"})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-10">
-            @Html.LabelFor(m => m.MakePickUpOrder.CardNumber, new {@class = "col-md-2 control-label"})
-            @Html.TextBoxFor(m => m.MakePickUpOrder.CardNumber, new {@class = "form-control"}) <text style="color: #79818a; font-size: 10px">*оставьте поле пустым, чтобы не использовать оплату картой и оплатить позднее</text>
-            @Html.ValidationMessageFor(m => m.MakePickUpOrder.CardNumber, "", new {@class = "text-danger"})
-            
+        <div class="form-group">
+            <div class="col-md-10">
+                @Html.LabelFor(m => m.MakePickUpOrder.CardNumber, new {@class = "col-md-2 control-label"})
+                @Html.TextBoxFor(m => m.MakePickUpOrder.CardNumber, new {@class = "form-control"}) <text style="color: #79818a; font-size: 10px">*оставьте поле пустым, чтобы не использовать оплату картой и оплатить позднее</text>
+                @Html.ValidationMessageFor(m => m.MakePickUpOrder.CardNumber, "", new {@class = "text-danger"})
+
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Подтвердить информацию о заказе" class="btn btn-default"/>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Подтвердить информацию о заказе" class="btn btn-default"/>
+            </div>
         </div>
-    </div>
+    }
 }
