--- a/Crunchers/Views/Shared/_LoginPartial.cshtml
+++ b/Crunchers/Views/Shared/_LoginPartial.cshtml
@@ -4,17 +4,18 @@
 <script src="//js.maxmind.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
 <script>
 function getCity(city){
-    if(city!=null && city!="")
+    if( city!=undefined && city!="")
         {
             localStorage.setItem('city',city);
         }
-    if(localStorage.getItem('city')!=null)
+    if(localStorage.getItem('city')!=null && localStorage.getItem('city')!="undefined")
                  {
                    document.getElementById('cityItem').innerText=localStorage.getItem('city');  
                  }
     else {
          let onSuccess = function(location){
                   document.getElementById('cityItem').innerText=location.city.names.ru;
+                  localStorage.setItem('city',location.city.names.ru);
             };
             
             let onError = function(error){
